--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,22 @@
 body{
-    background-color: #efe8e8;
+    background-color: #bdadad;
 }
 
+
+.contact-form {
+    max-width: 400px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form input,
+.contact-form textarea {
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
 footer {
     background: #111;
     color: white;
