--- a/image.css
+++ b/image.css
@@ -1,7 +1,7 @@
 /* Gallery Page Styling */
 .gallery-section {
   padding: 20px;
-   background: linear-gradient(to right, #660393, #393e46);
+   background: linear-gradient(to right, #3e1191, #776858);
     color: white;
     height: 90vh;
 }
