--- a/image.css
+++ b/image.css
@@ -25,9 +25,9 @@
 
 /* Images */
 .gallery-images img {
-  width: 200px;
-  height: 150px;
-  margin: 10px;
+  width: 500px;
+  height: 350px;
+  margin: 20px;
   border-radius: 8px;
   border: 2px solid #ddd;
   transition: transform 0.3s;
@@ -73,3 +73,9 @@ header {
     color: #ab1700;
 }
 
+footer {
+    background: #9b0466;
+    color: white;
+    text-align: center;
+    padding: 5px;
+}
